{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 31,
  "lineage": "3c7d9a51-2e84-4f06-9b7d-a41c58e02f19",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [{"ports": ["443"], "protocol": "tcp"}],
            "destination_ranges": ["10.0.0.0/8"],
            "direction": "INGRESS",
            "disabled": false,
            "id": "projects/acme-prod/global/firewalls/allow-internal-https",
            "name": "allow-internal-https",
            "network": "projects/acme-prod/global/networks/prod-vpc",
            "priority": 1000,
            "project": "acme-prod",
            "source_ranges": ["10.0.0.0/8"],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": []
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "egress_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [{"ports": ["443"], "protocol": "tcp"}],
            "destination_ranges": ["10.0.0.0/8"],
            "direction": "EGRESS",
            "disabled": false,
            "id": "projects/acme-prod/global/firewalls/allow-egress-internal",
            "name": "allow-egress-internal",
            "network": "projects/acme-prod/global/networks/prod-vpc",
            "priority": 1000,
            "project": "acme-prod",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": []
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "egress_deny_world",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "deny": [{"ports": [], "protocol": "all"}],
            "destination_ranges": ["0.0.0.0/0"],
            "direction": "EGRESS",
            "disabled": false,
            "id": "projects/acme-prod/global/firewalls/deny-egress-world",
            "name": "deny-egress-world",
            "network": "projects/acme-prod/global/networks/prod-vpc",
            "priority": 65534,
            "project": "acme-prod",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": []
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "prod_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "id": "projects/acme-prod/global/networks/prod-vpc",
            "name": "prod-vpc",
            "project": "acme-prod"
          }
        }
      ]
    }
  ]
}